2012-03-14  Andrew Haley  <aph@redhat.com>

	* arm_port/hotspot/src/cpu/zero/vm/bytecodes_arm.def (ldc, ldc_w):
	Replace numeric constants for constant pool with symbols.
	* arm_port/hotspot/src/cpu/zero/vm/cppInterpreter_arm.S (build_frame):
	Likewise.
	(fast_native_entry): Likewise.

2012-03-02  Andrew Haley  <aph@redhat.com>

	* arm_port/hotspot/src/cpu/zero/vm/arm_cas.S: New file.
	* patches/arm.patch (void get_processor_features): New function
	that enables compareAndSwap on jlongs.
	(atomic_linux_zero.inline.hpp: arm_val_compare_and_swap): New
	function.
	(atomic_linux_zero.inline.hpp: Atomic::store): Use
	arm_val_compare_and_swap.

	* openjdk/hotspot/src/cpu/zero/vm/thumb2.cpp (IT_MASK_TT)
	(IT_MASK_TE, IT_MASK_TTT, IT_MASK_TEE): Add a few new IT
	encodings.
	(Thumb2_dUnaryOp): Generalize Thumb2_dNeg.
	(Thumb2_dNeg, Thumb2_dAbs): Specializations of Thumb2_dUnaryOp.
	(handle_special_method): Use intrinsic_id instead of method_kind.
	Add handlers for _compareAndSwapInt and _compareAndSwapLong.
	(Thumb2_codegen): Call handle_special_method() for invokevirtual.
	Pass stackdepth to handle_special_method().

2012-03-02  Xerxes Rånby  <xerxes@zafena.se>
	    Andrew Haley  <aph@redhat.com>

	* arm_port/hotspot/src/cpu/zero/vm/thumb2.cpp:
	(handle_special_method): Fix a off by one byte SIGILL crash
	during BLX call to thumb compiled StrictMath intrinsics for
	--with-float=hard --with-mode=thumb ARM builds.

2012-02-27  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* Makefile.am: Add new patch.
	* NEWS: Mention backport.
	* patches/openjdk/4465490-Suspicious_double-check_locking_idiom.patch:
	Backport of S4465490: Suspicious about double-check locking idiom being
	used in the code.

2012-02-27  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* Makefile.am: Add new patch.
	* NEWS: Mention backport.
	* patches/openjdk/6883983-JarVerifier_removed_dependency_sun_security_pkcs.patch:
	Backport of S6883983: JarVerifier dependency on
	sun.security.pkcs should be removed
