@@ -1,3 +1,10 @@
+2012-03-15  Andrew Haley  <aph@redhat.com>
+
+	* openjdk/hotspot/src/cpu/zero/vm/thumb2.cpp (it): Add code to
+	handle negated conditions.
+	(handle_special_method): Use blx_reg rather than blx in case the
+	target is thumb code.
+
 2012-03-14  Andrew Haley  <aph@redhat.com>
 
 	* arm_port/hotspot/src/cpu/zero/vm/bytecodes_arm.def (ldc, ldc_w):
